# simpla_loop

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: concepts.md
examples/: README.md  debugging_trace.py  list_folder.py  multi_step_task.py  visualized_agent.py
src/simpla_loop/: __init__.py  agent.py
src/simpla_loop/core/: README.md  __init__.py  exceptions.py  loop.py  memory.py  reporter.py  tool.py
src/simpla_loop/llm/: README.md  __init__.py  client.py  models.py  reasoners.py
src/simpla_loop/loops/: README.md  __init__.py  react.py
src/simpla_loop/memory/: README.md  __init__.py  in_memory.py
src/simpla_loop/reporters/: __init__.py  agent_vis.py
src/simpla_loop/tools/: README.md  __init__.py  bash.py  calculator.py
tests/: conftest.py  test_agent.py  test_integration.py  test_llm.py  test_memory.py  test_react_loop.py  test_tools.py
tests/test_core/: test_tool.py
tests/test_llm/: test_client.py  test_models.py  test_reasoners.py
tests/test_loops/: test_react.py
tests/test_tools/: test_bash.py  test_calculator.py
